Bug 1615121 - Keep CacheEntry.mLock when reading its mState to prevent a race, r=michal,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D62773